--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,7 +6,7 @@
       <h3><%= 'New tasks' %></h3>
       <% @tasks.where(task_status: 0).each do |t| %>
         <ul>
-          <li><%= t.title %></li>
+          <li><%= link_to "#{t.title}", t %></li>
           <%= link_to 'Start', start_task_path(t) %> 
         </ul>
       <% end %>
@@ -15,7 +15,7 @@
       <h3><%= 'In progress' %></h3>
       <% @tasks.where(task_status: 1).each do |t| %>
         <ul>
-          <li><%= t.title %></li>
+          <li><%= link_to "#{t.title}", t %></li>
           <%= link_to 'Completed', complete_task_path(t) %> 
         </ul>
       <% end %>  
@@ -24,7 +24,7 @@
       <h3><%= 'Complete' %></h3>
       <% @tasks.where(task_status: 2).each do |t| %>
         <ul>
-          <li><%= t.title %></li>
+          <li><%= link_to "#{t.title}", t %></li>
         </ul>
       <% end %>
     </div>
