--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,13 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field mb">
     <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions mb">
+    <%= f.submit class: 'button button-navbar' %>
   </div>
 
 <% end %>
