--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,19 +12,29 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     
-    <% if user_signed_in? %>
-      <%= link_to "Create task", new_task_path %>
-    <% end %>
-
-    <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path%> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "Sign up", new_user_registration_path%> |
-      <%= link_to "Login", new_user_session_path%>
-    <% end %>
-
+    <div class="container-top">
+      <div class="row"> 
+        <div class="col col-25 text-left">
+          <% if user_signed_in? %>
+            <%= link_to "Create task", new_task_path, class: 'button button-navbar' %>
+          <% end %>
+        </div>
+        
+        <% if user_signed_in? %>
+          <div class="col col-75 text-right">
+          
+            <%= link_to 'Edit profile', edit_user_registration_path, class: 'button button-navbar' %>
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'button button-navbar' %>
+          </div>
+        <% else %>
+          <div class="col col-100 text-right">
+            <%= link_to "Sign up", new_user_registration_path, class: 'button button-navbar' %>
+            <%= link_to "Login", new_user_session_path, class: 'button button-navbar' %>
+          </div>
+        <% end %>
+        </div>
+      </div>
+    </div>
     <%= yield %>
   </body>
 </html>
