--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,30 +3,30 @@
 <div class="container">
   <div class="row"> 
     <div class="col col-33">
-      <h3><%= 'New tasks' %></h3>
+      <h3 class="new"><%= 'New tasks' %></h3>
       <% @tasks.where(task_status: 0).each do |t| %>
         <ul>
-          <li><%= link_to "#{t.title}", t %></li>
-          <%= link_to 'Start', start_task_path(t) %> 
+          <li class="mb"><%= link_to "#{t.title}", t, class: 'button button-task' %></li>
+          <%= link_to 'Start task', start_task_path(t), class: 'button button-next' %> 
         </ul>
       <% end %>
     </div>
     <div class="col col-33">
-      <h3><%= 'In progress' %></h3>
+      <h3 class="in-progress"><%= 'In progress' %></h3>
       <% @tasks.where(task_status: 1).each do |t| %>
         <ul>
-          <li><%= link_to "#{t.title}", t %></li>
+          <li class="mb"><%= link_to "#{t.title}", t, class: 'button button-task'%></li>
           <% if t.approved_counter >= 2 %>
-            <%= link_to 'Completed', complete_task_path(t) %> 
+            <%= link_to 'Task completed', complete_task_path(t), class: 'button button-next' %> 
           <% end %>
         </ul>
       <% end %>  
     </div>
     <div class="col col-33">
-      <h3><%= 'Complete' %></h3>
+      <h3 class="completed"><%= 'Complete' %></h3>
       <% @tasks.where(task_status: 2).each do |t| %>
         <ul>
-          <li><%= link_to "#{t.title}", t %></li>
+          <li><%= link_to "#{t.title}", t, class: 'button button-task'%></li>
         </ul>
       <% end %>
     </div>
