--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', user: @task %>
 
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Back', tasks_path, class: 'button button-navbar' %>
