--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,6 +7,7 @@
   <%= @task.user.email %>
 </p>
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %> |
-<%= link_to "Delete", task_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to 'Edit', edit_task_path(@task), class: 'button button-navbar' %> 
+<%= link_to 'Back', tasks_path, class: 'button button-navbar' %>
+<%= link_to "Delete", task_path, method: :delete, data: { confirm: 'Are you sure?' },
+ class: 'button button-navbar' %>
