--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,7 +6,7 @@
       <h3 class="new"><%= 'New tasks' %></h3>
       <% @tasks.where(task_status: 0).each do |t| %>
         <ul>
-          <li class="mb"><%= link_to "#{t.title}", t, class: 'button button-task' %></li>
+          <%= render 'tasks/task', t: t %>
           <%= link_to 'Start task', start_task_path(t), class: 'button button-next' %> 
         </ul>
       <% end %>
@@ -15,7 +15,7 @@
       <h3 class="in-progress"><%= 'In progress' %></h3>
       <% @tasks.where(task_status: 1).each do |t| %>
         <ul>
-          <li class="mb"><%= link_to "#{t.title}", t, class: 'button button-task'%></li>
+          <%= render 'tasks/task', t: t %>
           <% if t.approved_counter >= 2 %>
             <%= link_to 'Task completed', complete_task_path(t), class: 'button button-next' %> 
           <% end %>
@@ -26,7 +26,7 @@
       <h3 class="completed"><%= 'Complete' %></h3>
       <% @tasks.where(task_status: 2).each do |t| %>
         <ul>
-          <li><%= link_to "#{t.title}", t, class: 'button button-task'%></li>
+          <%= render 'tasks/task', t: t %>
         </ul>
       <% end %>
     </div>
