--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -9,6 +9,8 @@
   border-radius: 5px;
   transition: all 0.5s;
   cursor: pointer;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .button-navbar {
